# distillery

./: .env.example  README.md  pyproject.toml
distillery/: __init__.py  checkpoint.py  cli.py  config.py  mcp_server.py  pipeline.py  types.py  utils.py
distillery/export/: __init__.py  datacard.py  hf_format.py  jsonl.py  split.py
distillery/filter/: __init__.py  diversity.py  hallucination.py  judge.py
distillery/generate/: __init__.py  evol.py  expand.py  formats.py  multiturn.py  seed.py
distillery/ingest/: __init__.py  chunker.py  pdf.py  text.py  url.py
distillery/providers/: __init__.py  cache.py  embeddings.py
examples/: quickstart.py
providers/: llm.py
tests/: test_cache.py  test_checkpoint.py  test_chunker.py  test_datacard.py  test_diversity.py  test_evol.py  test_grounded_semantic.py  test_hallucination.py  test_multiturn.py  test_split.py  test_tool_calling_export.py  test_utils.py
